# iOPEX

./: .env.example  .gitignore  48_week_migration_plan.html  CLAUDE.md  ECOSYSTEM.md  Enhanced_ETL_Migration_v2.docx  docker-compose.yml  sync-repos.sh
CyberArk migration/: build_docx.py  (+3 more)
contract-intelligence/: .gitignore  AGENTS.md  AI_Contract_Automation_Upgrade_Implementation.docx  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Contract_Intellegence_Demo.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  iOPEX_Contract_WFIntelliFy_Demo.html  iOPEX_WFIntelliFy_Master_Demo.html  pyproject.toml
contract-intelligence/prompts/spells/: contract-risk-assessment.md  generate-redlines.md
contract-intelligence/src/contract_intelligence/: __init__.py  config.py  main.py  orchestrator.py
contract-intelligence/src/contract_intelligence/agents/: archiver.py  distributor.py  extractor.py  generator.py  intake.py  monitor.py  obligation.py  risk.py  signer.py
contract-intelligence/src/contract_intelligence/clients/: anthropic_client.py  docuseal_client.py  gmail_client.py  openai_client.py  pdfshift_client.py
contract-intelligence/tests/: test_smoke.py
pam/cyberark-migration/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAVERICK_CONTEXT.md  NOTICE.md  README.md  SCAFFOLD-ONBOARDING-PROMPT.md  cli.py  pyproject.toml  requirements.txt
pam/cyberark-migration/agents/: agent_04_etl.py  agent_05_heartbeat.py  agent_14_onboarding.py
pam/cyberark-migration/core/: source_adapters.py  state.py
pam/cyberark-migration/docs/: DEPLOYMENT.md
(+410 files in other folders)
