[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "CyberArk_migration"
version = "0.1.0"
description = "[[DESCRIPTION]]"
requires-python = ">=3.12"
dependencies = [
    # [[DEPENDENCIES]]
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
